--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
    },
    "dependencies": {
       "class-validator": "^0.11.0",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "mongodb": "^3.0.8",
       "reflect-metadata": "^0.1.10",
@@ -20,6 +21,6 @@
       "build-ts": "tsc -p .",
       "build": "npm run build-ts && npm run build-babel",
       "build-babel": "babel -d ./dist ./src -s",
-      "pm2-start":  "pm2 start build/index.js --watch"
+      "pm2-start": "pm2 start build/index.js --watch"
    }
 }
